[gd_scene load_steps=5 format=3 uid="uid://bkx6e4ugrtcs3"]

[ext_resource type="Script" path="res://characters/attacks/ranged_attack.gd" id="1_ycfjp"]
[ext_resource type="PackedScene" uid="uid://bl5k6lnca7tck" path="res://characters/components/damageable_component.tscn" id="2_p60gu"]

[sub_resource type="Animation" id="Animation_6c54f"]
resource_name = "idle"
length = 0.60001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fky0u"]
_data = {
"idle": SubResource("Animation_6c54f")
}

[node name="RangedAttack" type="RigidBody2D" groups=["RangedAttack"]]
z_index = 1
y_sort_enabled = true
collision_layer = 128
collision_mask = 128
gravity_scale = 0.0
script = ExtResource("1_ycfjp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
debug_color = Color(0.853564, 0.366409, 0.118533, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fky0u")
}

[node name="LiveTimer" type="Timer" parent="."]

[node name="DamageableComponent" parent="." instance=ExtResource("2_p60gu")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
